fix dark mode button

--- a/Components/Alerts/alerts.css
+++ b/Components/Alerts/alerts.css
@@ -20,5 +20,8 @@
 
 .alert-warn{
     background-color: var(--warn);
+}
 
+.alert i{
+  color: var(--secondary);
 }
